<resources>
    <string name="app_name">Proyecto_Final_Car_Wash</string>
    <string name="escribaSuEmail">Escriba su correo</string>
    <string name="ingreseSuPassword">Escriba su contraseña</string>
    <string name="inciarSesion">Iniciar Sesion</string>
    <string name="notRegistered">No tengo una cuenta.</string>
    <string name="forgotPassword">Olvide mi contraseña</string>
    <string name="registrarse">Registrarse</string>
    <string name="escribaSuApellido">Escriba su Apellido</string>
    <string name="escribaSuNombre">Escriba su nombre</string>
    <string name="escribaSuTelefono">Escriba su telefono</string>
    <string name="miPerfil">Mi Perfil</string>
    <string name="cerrarSesion">Cerrar Sesion</string>
    <string name="mandarMensajeAlCorreo">Mandar mensaje de recuperacion</string>
    <string name="forgotPasswordTitle">Olvide Mi Contraseña</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="seguridadTitleTextView">Seguridad</string>
    <string name="ingreseSuPasswordNuevo">Ingrese su nueva contraseña</string>
    <string name="ingreseSuPasswordActual">Ingrese su contraseña actual</string>
    <string name="cambiarPasswordTitle">Cambiar contraseña</string>
    <string name="eliminarCuentaTitle">Eliminar cuenta</string>
    <string name="apellidoTextField">Apellido</string>
    <string name="nombreTextField">Nombre</string>
    <string name="editPerfilTextView">Editar Perfil</string>
    <string name="salvarCambiosButton">Salvar Cambios</string>
    <string name="telefonoTextField">Telefono</string>
    <string name="correo">Correo</string>
    <string name="cambiarCorreoTextView">Cambiar Correo</string>
    <string name="solicitarcotizacion">Solicitar Cotización</string>
    <string name="historialButton">Historial</string>
    <string name="cotizacionTextView">Cotice su lavado</string>
    <string name="camionButton">Camion</string>
    <string name="trailerButton">Trailer</string>
    <string name="busButton">Bus</string>
    <string name="camionetaButton">Camioneta</string>
    <string name="turismoButton">Turismo</string>
    <string name="confirmarButton">Confirmar</string>
    <string name="seleccioneUnLavado">Seleccione un lavado</string>
    <string name="seleccioneUnVehiculo">Seleccione un vehiculo</string>
    <string name="seleccioneUnaFecha">Seleccione una fecha</string>
    <string name="solicitarPedidoButton">Solicitar pedido</string>
    <string name="seleccioneUnServicio">Seleccione un servicio</string>
    <string name="totalPagar">Total: </string>
    <string name="historialTextView">Historial de servicios</string>
    <string name="totalTextView">Total:</string>
    <string name="servicioTextView">Servicio:</string>
    <string name="fechaTextView">Fecha de entrega:</string>
    <string name="confirmacionTextView"></string>
    <string name="numeroPedidoTextView">Numero de pedido:</string>
    <string name="tipoLavadoTextView">Tipo de lavado:</string>
    <string name="vehiculoPedidoTextView">Tipo de vehiculo:</string>
    <string name="regresarButton">Regresar</string>
    <string name="continuarPedidoCotizacionButton">Continuar el pedido</string>
    <string name="seleccionarDomicilioTextView">Seleccione su ubicacion</string>
    <string name="finalizarPedidoButton">Finalizar pedido</string>
    <string name="vehiculoTextView">"Vehiculo: "</string>
    <string name="impuestoTextView">"Impuesto: "</string>
    <string name="domicilioTextView">"Domicilio: "</string>
    <string name="lavadoTextView">"Lavado: "</string>
    <string name="nombreVehiculoTextView">Nombre del vehiculo</string>
    <string name="verUbicacionSeleccionadaButton">Ver ubicacion seleccionada</string>
    <string name="ubicacionDeSuPedido">Ubicacion de su pedido</string>
</resources>